fix backface-visibility

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1079,6 +1079,7 @@
 				-o-transition: background-color 0.35s ease-in-out;
 				-ms-transition: background-color 0.35s ease-in-out;
 				transition: background-color 0.35s ease-in-out;
+				backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 			}
 
